  * [Roland] Fixed invocation of tarballs.sh in crontab.
  * [Roland] [From 2.5] Fixed mailing-lists entries in LDAP.
  * [Roland] Included entries from the 2.5 changelog file into this one.
    Don't worry it the dates are not ordered.  Development has been
    concurrent for a while (and still is).  Such merges should happen
    until the 2.5 branch is abandoned.

 -- Roland Mas <lolando@debian.org>  Thu, 20 Jun 2002 14:02:38 +0200

sourceforge (2.6-0+11) unstable; urgency=low

  * [Roland] Fixed theme registration for 2.6->2.6 upgrades.  You might
    encounter problems if you registered them manually, in this case
    simply run the following SQL in the sourceforge database:
    DELETE FROM themes WHERE dirname LIKE 'savannah_%'; BUG #124 CLOSED
  * [Christian] changed Layout.class with div align=center BUG #120 CLOSED
  * [Christian] removed link to docman BUG #122 CLOSED
  * [Christian] $sys_name is now used for imported savannah themes
    BUG #129 CLOSED
  * [Christian/Roland] added darkslate savannah theme

 -- Christian Bayle <bayle@debian.org>  Thu, 25 Apr 2002 17:15:57 +0200

sourceforge (2.6-0+10) unstable; urgency=low

  * [Christian] Corrected wrong link in menu.php for lastlogin.php.
  * [Roland] *Lots* of patches from Olafur Osvaldsson <oli@isnic.is>
    applied, many thanks to him.
  * [Roland] Changed about.php page so that it now speaks about Debian
    Sourceforge.  It's internationalised, too.
  * [Roland] Page footer is now shorter, internationalised, and pointing
    to the About page.
  * [Roland] Fixed links in the Site News page.
  * [Roland] Made groups siteadmin and newsadmin public to prevent
    problems with submitting of news.  Also, changed their names for
    coherence with names inherited from the 2.5 branch.
  * [Christian] Continuing work on theming, added a new function in
    html.php (url_html)
  * [Roland] Removed a few bashisms in maintainer scripts.