@@ -34,8 +34,9 @@ sourceforge (2.6-0+11+) unstable; urgency=low
     Don't worry it the dates are not ordered.  Development has been
     concurrent for a while (and still is).  Such merges should happen
     until the 2.5 branch is abandoned.
+  * [Roland] Added missing languages.
 
- -- Roland Mas <lolando@debian.org>  Thu, 20 Jun 2002 14:02:38 +0200
+ -- Roland Mas <lolando@debian.org>  Thu, 20 Jun 2002 14:04:19 +0200
 
 sourceforge (2.6-0+11) unstable; urgency=low
 
